--- a/Approval_Processes/.project
+++ b/Approval_Processes/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Apex_Language_Assignment</name>
+	<name>Approval_Processes</name>
 	<comment></comment>
 	<projects>
 	</projects>
