--- a/Triggers/.project
+++ b/Triggers/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Approval_Processes</name>
+	<name>Triggers</name>
 	<comment></comment>
 	<projects>
 	</projects>
