--- a/TemplatesAndComponents/.project
+++ b/TemplatesAndComponents/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>VfPagesPart1</name>
+	<name>TemplatesAndComponents</name>
 	<comment></comment>
 	<projects>
 	</projects>
