--- a/JavaScript_JQuery_AngularJS/.project
+++ b/JavaScript_JQuery_AngularJS/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TemplatesAndComponents</name>
+	<name>JavaScript_JQuery_AngularJS</name>
 	<comment></comment>
 	<projects>
 	</projects>
