--- a/Governer_Limits/.project
+++ b/Governer_Limits/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Standard_CRM_Administration</name>
+	<name>Governer_Limits</name>
 	<comment></comment>
 	<projects>
 	</projects>
