--- a/Test Classes/.project
+++ b/Test Classes/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Governer_Limits</name>
+	<name>Test Classes</name>
 	<comment></comment>
 	<projects>
 	</projects>
